//
//  TargetIdentifier.swift
//  HACKER
//
//  Created by Danna Lee on 2022/03/22.
//

import Foundation

/// SignupViewController의 타겟(버튼) 테스트용  identifer을 상수로 정의
class SignupVCIdentifier {
  static let view = "signupView"
  static let usernameTextField = "signupUsernameTextField"
  static let clearButton = "signupClearButton"
  static let nextButton = "signupNextButton"
}

/// NicknameViewController의 타겟(버튼) 테스트용  identifer을 상수로 정의
class NicknameVCIdentifier {
  static let view = "nicknameView"
  static let usernameTextField = "nicknameUsernameTextField"
  static let clearButton = "nicknameClearButton"
  static let nextButton = "nicknameNextButton"
  static let countTextLabel = "nicknameCountTextLabel"
}
